<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_search_libraries"
        android:icon="@drawable/ic_search_24px__1_"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/main_activity_actions_plus_lib"
        android:icon="@drawable/ic_outline_add_24"
        android:title="@string/new_library"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/action_user_profile"
        android:icon="@drawable/ic_account_circle_white_24px"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        />

</menu>