<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/user_profile_activity_user_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        tools:text="@string/user_name"
        />


    <Button
        android:id="@+id/user_profile_activity_save_changes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="onClick"
        android:text="@string/save_changes"
        tools:text="@string/save_changes"
        />

    <Button
        android:id="@+id/user_profile_activity_sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@+id/user_profile_activity_save_changes_button"
        android:onClick="onClick"
        android:text="@string/sign_out"
        tools:text="@string/sign_out"
        />
</RelativeLayout>