<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:id="@+id/library_activity_base_layout"
    >

    <EditText
        android:id="@+id/library_activity_library_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:hint="@string/name_of_the_library"
        android:maxLines="1"
        android:textSize="24sp"
        tools:text="Library name"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/library_activity_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5"
            android:layout_marginRight="16dp"
            >

            <EditText
                android:id="@+id/library_activity_language_code_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:hint="@string/type_lang_code"
                android:maxLength="2"
                android:maxLines="1"
                />

            <EditText
                android:id="@+id/library_activity_language_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:hint="@string/type_lang"
                android:maxLines="1"
                android:textSize="20sp"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/library_activity_add_lang_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_language_24px"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClick"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/library_activity_language_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        tools:text="amount of languages"
        />

    <Button
        android:id="@+id/library_activity_new_translation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/new_translation"
        />

</LinearLayout>