<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/activity_library_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:maxLines="20"
        android:textSize="32sp"
        tools:text="Library name"
        android:hint="Name of the library"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_library_profile_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/activity_library_profile_language_code_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="#EBFCFF"
                android:hint="@string/type_lang_code"
                android:maxLength="2"
                android:maxLines="1"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/activity_library_profile_language_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="#EBFCFF"
                android:hint="@string/type_lang"
                android:maxLines="1"
                android:textSize="20sp"
                />
        </LinearLayout>


        <Button
            android:id="@+id/activity_library_profile_language_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:onClick="onAddLanguageClicked"
            android:text="@string/add_lang"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/activity_library_profile_language_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        tools:text="amount of languages"
        />

    <Button
        android:id="@+id/activity_library_profile_new_translation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="96dp"
        android:layout_marginTop="16dp"
        android:onClick="onNewTranslationClicked"
        android:text="@string/new_translation"
        />

</LinearLayout>